--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@stackflow/core": "^1.0.10",
+    "@stackflow/plugin-basic-ui": "^1.5.2",
+    "@stackflow/plugin-renderer-basic": "^1.1.7",
     "@stackflow/react": "^1.1.7",
     "next": "14.1.0",
     "react": "^18",
